[project]
name = "discord-ai-assistant"
version = "0.2.0"
description = "Discord bot using RAG to answer AI/ML questions"
authors = [
    {name = "LeonByte"}
]
license = {text = "All Rights Reserved"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"

