[project]
name = "discord-ai-assistant"
version = "0.2.0"
description = "Discord bot using RAG to answer AI/ML questions"
authors = [
    {name = "LeonByte"}
]
license = {text = "All Rights Reserved"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0,<2.0.0",
    "discord.py>=2.5.0,<3.0.0",
    "sentence-transformers>=4.0.0,<5.0.0",
    "faiss-cpu>=1.11.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "aiohttp (>=3.11.18,<4.0.0)"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0,<26.0.0",
    "isort>=6.0.1,<7.0.0",
    "pytest>=8.3.5,<9.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
package-mode = false